<resources>
    <string name="app_name">AAAMobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_setting">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Repair</item>
        <item>Prices</item>
        <item>My Account</item>
        <item>Orders</item>
        <item>Contact us</item>
        <item>About</item>
        <item>Shopping Cart</item>
    </string-array>
    <string-array name="array_companies">
        <item>Select Make</item>
        <item>Iphone</item>
        <item>Samsung</item>
    </string-array>
    <string-array name="array_model_iphone">
        <item>Select Model</item>
        <item>Iphone 4</item>
        <item>Iphone 4S</item>
        <item>Iphone 5</item>
        <item>Iphone 5C</item>
        <item>Iphone 5S</item>
        <item>Iphone 6</item>
        <item>Iphone 6S</item>
        <item>Iphone 6S Plus</item>
        <item>Iphone 7</item>
    </string-array>
    <string-array name="array_model_samsung">
        <item>Select Model</item>
        <item>Samsung galaxy 5</item>
        <item>Samsung galaxy 6</item>
        <item>Samsung galaxy 7</item>
    </string-array>
    <string-array name="array_problem">
        <item>Select Problem</item>
        <item>Broken Screen</item>
        <item>Charging port</item>
        <item>Back cover</item>
        <item>Battery</item>
        <item>Loud speaker</item>
        <item>Ear phone jack</item>
        <item>Home button</item>
        <item>Volume button / Power button</item>
    </string-array>
    <string-array name="array_status">
        <item>No updates yet</item>
        <item>Received In Warehouse</item>
        <item>Under Process</item>
        <item>Repaired Successfully</item>
        <item>Repair Unsuccessfull</item>
        <item>Sent from Warehouse</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to payment -->
    <string name="prompt_card_no">Card number</string>
    <string name="prompt_expiry_month">Month</string>
    <string name="prompt_expiry_year">Year</string>
    <string name="prompt_cvc">CVC</string>
    <string name="action_pay">Pay</string>

    <!-- Strings related to login and edit profile -->
    <string name="prompt_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_send_password_email">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_payment">PaymentActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
