<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app15.aaamobile.view.CardPayment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_card_no"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_exp_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/et_card_exp_month"
                android:layout_width="@dimen/common_edit_text_width"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_expiry_month"
                android:inputType="date"
                android:maxLength="2"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_toRightOf="@id/tl_exp_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/et_card_exp_year"
                android:layout_width="@dimen/common_edit_text_width"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_expiry_year"
                android:inputType="date"
                android:maxLength="4"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/et_card_cvc"
            android:layout_width="@dimen/common_edit_text_width"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_cvc"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_make_card_payment"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/action_pay"
        android:textStyle="bold" />

</LinearLayout>
